PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 4.8.0-Sokndal
13 August 2013

- pts-core: When PHP is missing, for apt-get/yum distributions report the likely command needed to run
- pts-core: Don't prompt to install missing/failed tests when using the 'benchmark' command
- phodevi: Support for reading the Radeon DRM driver's current core/memory frequencies when DPM is enabled (Linux 3.11+)
- phodevi: Support for reading the top Radeon DRM driver core/memory frequency via dmesg when DPM is enabled (Linux 3.11+)
- phodevi: Support for reading the Radeon DRM driver's current GPU (vddc) voltage when DPM is enabled (Linux 3.11+)
- phoromatic: Updated module against latest upstream Phoromatic.com Server

Phoronix Test Suite 4.8 Milestone 5
6 August 2013

- pts-core: Add php5-json as a dependency now on Debian packages since Ubuntu split it up and no longer in php5-cli
- pts-core: Add support for reporting set kernel module parameters to notes on the system table graph
- pts-core: Add support for reporting of important environment variables to notes on the system table graph
- pts-core: Changes needed for modern Phoromatic
- pts_Graph: Add new automated color chooser for line graph color selection
- pts_Graph: Slight rework to code handling the remove of common words from result identifiers
- phodevi: Add support for Intel DRM driver's gt_max_freq_mhz for obtaining maximum GPU frequency on modern kernels
- phodevi: Add support for Intel DRM driver's gt_cur_freq_mhz for obtaining current GPU frequency on modern kernels
- phodevi: Only prepend AIB vendor to NVIDIA and AMD GPU strings
- phodevi: Add system.kernel-parameters property for reading kernel command line parameters
- phodevi: Add support for checking the __GL_FSAA_MODE environment variable
- phodevi: Add support for checking the __GL_LOG_MAX_ANISO environment variable
- phodevi: Add 0xc36400 super block for CephFS
- phodevi: Add unity-system-compositor version detection

Phoronix Test Suite 4.8 Milestone 4