@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- pts-core: Fix OpenBenchmarking.org log-ins
+
 Phoronix Test Suite 4.8.0-Sokndal
 13 August 2013
 
